--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "jest",
-    "test:ci": "jest --ci --reporters=default --reporters=jest-junit"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
